# Rustic-Engine

./: .gitignore  CLAUDE.md  Cargo.toml  GLM.sh  context.txt
.cargo/: config.toml
android/: AndroidManifest.xml  build.sh
assets/: base_game  embed  exclude  fonts  meta  readme.txt  secrets  shared  songs  translations  videos  week_assets
crates/rustanimate/: Cargo.toml  README.md
crates/rustanimate/src/: animation.rs  lib.rs  spritemap.rs
crates/rustic-app/: Cargo.toml
crates/rustic-app/src/: debug_overlay.rs  lib.rs  main.rs  rl_boot.rs  screen.rs  settings.rs
crates/rustic-app/src/screens/: characters.rs  difficulties.rs  freeplay.rs  freeplay_actions.rs  freeplay_funkin.rs  freeplay_funkin_assets.rs  freeplay_funkin_draw.rs  freeplay_funkin_layout.rs  freeplay_support.rs  gameplay_changers.rs  loading.rs  main_menu.rs  mod.rs  mods.rs  options.rs  play.rs  reset_score.rs  sprite_test.rs  story_menu.rs  story_menu_draw.rs  story_menu_support.rs  title.rs  video.rs  video_android.rs
crates/rustic-app/src/screens/play/: draw.rs  init.rs  input.rs  mod.rs  pause.rs  pause_draw.rs  rl.rs  story.rs  update.rs
crates/rustic-audio/: Cargo.toml
crates/rustic-audio/src/: lib.rs
crates/rustic-core/: Cargo.toml
crates/rustic-core/src/: character.rs  chart.rs  conductor.rs  config.rs  highscore.rs  lib.rs  mods.rs  note.rs  paths.rs  prefs.rs  rating.rs  scoring.rs  stage.rs  week.rs
crates/rustic-core/tests/: real_chart.rs  test_midnight_stage.rs
crates/rustic-gameplay/: Cargo.toml
crates/rustic-gameplay/src/: events.rs  lib.rs  play_state.rs
crates/rustic-hscript/: Cargo.toml
crates/rustic-hscript/src/: host.rs  interp.rs  lib.rs  scope.rs  value.rs
crates/rustic-hscript/tests/: smoke.rs
crates/rustic-render/: Cargo.toml
crates/rustic-render/src/: camera.rs  gpu.rs  health_icon.rs  lib.rs  postprocess.rs  shader.rs  sprites.rs  text.rs
crates/rustic-rl/: Cargo.toml
crates/rustic-rl/src/: agent.rs  bc.rs  demo.rs  harness.rs  lib.rs  network.rs  observe.rs  observe_build.rs  omni_trainer.rs  trainer.rs
crates/rustic-rl/src/arch/: audio.rs  backbone.rs  block.rs  config.rs  mod.rs  model.rs  vision.rs
crates/rustic-rl/tests/: arch_smoke.rs
crates/rustic-scripting/: Cargo.toml
crates/rustic-scripting/src/: hscript_bridge.rs  hscript_engine.rs  lib.rs  lua_engine.rs  lua_functions.rs  script_state.rs  tweens.rs
crates/rustic-scripting/tests/: hscript_integration.rs  lua_api_surface.rs
