[workspace]
resolver = "2"
members = [
    "crates/rustic-core",
    "crates/rustic-audio",
    "crates/rustic-render",
    "crates/rustic-gameplay",
    "crates/rustic-scripting",
    "crates/rustic-app",
]

[workspace.dependencies]
rustic-core = { path = "crates/rustic-core" }
rustic-audio = { path = "crates/rustic-audio" }
rustic-render = { path = "crates/rustic-render" }
rustic-gameplay = { path = "crates/rustic-gameplay" }
rustic-scripting = { path = "crates/rustic-scripting" }

macroquad = "0.4"
kira = { version = "0.9", features = ["ogg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
thiserror = "2"
log = "0.4"
