[workspace]
resolver = "2"
members = [
    "crates/rustic-core",
    "crates/rustic-audio",
    "crates/rustic-render",
    "crates/rustic-gameplay",
    "crates/rustic-scripting",
    "crates/rustic-app",
    "crates/rustanimate",
]

[workspace.dependencies]
rustic-core = { path = "crates/rustic-core" }
rustic-audio = { path = "crates/rustic-audio" }
rustic-render = { path = "crates/rustic-render" }
rustic-gameplay = { path = "crates/rustic-gameplay" }
rustic-scripting = { path = "crates/rustic-scripting" }

wgpu = "28"
naga = { version = "28", features = ["glsl-in", "wgsl-out"] }
winit = "0.30"
glyphon = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
kira = { version = "0.9", features = ["ogg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
glam = "0.29"
rustanimate = { path = "crates/rustanimate" }
