[package]
name = "rustic-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rustic-core = { workspace = true }
rustic-render = { workspace = true }
rustic-audio = { workspace = true }
rustic-gameplay = { workspace = true }
rustic-scripting = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
