[package]
name = "rustic-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustic_app"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "rustic-app"
path = "src/main.rs"

[dependencies]
rustic-core = { workspace = true }
rustic-render = { workspace = true }
rustic-audio = { workspace = true }
rustic-gameplay = { workspace = true }
rustic-scripting = { workspace = true }
rustanimate = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ffmpeg-next = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
wgpu = { workspace = true }
libc = "0.2"
rustic-rl = { workspace = true, optional = true }

[features]
default = []
# Pulls in the RL harness and exposes --rustic-rl / --rl-config CLI flags.
# Forwarding `rl-train` enables the candle-backed Harness (policy network,
# REINFORCE trainer, BC pretrainer) — the minimum for live in-engine training.
rl = ["dep:rustic-rl", "rustic-rl/rl-train"]

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
android_logger = "0.14"
