[package]
name = "rustic-render"
version = "0.1.0"
edition = "2021"

[dependencies]
rustic-core = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
image = { workspace = true }
bytemuck = { workspace = true }
quick-xml = { workspace = true }
glyphon = { workspace = true }
log = { workspace = true }
