[package]
name = "rustic-rl"
version = "0.1.0"
edition = "2021"
description = "Optional RL harness for RusticV2. Skeleton only — inference-in-engine, training out-of-engine."

[dependencies]
rand = "0.9"
rand_distr = "0.5"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Neural-net stack. Gated behind `rl-train` because candle pulls in a sizable
# dependency tree (and optionally CUDA/Metal) that we don't want forced on
# normal inference-only builds.
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }

[features]
default = []
# Pulls in candle + the custom omnimodal architecture.
rl-train = ["dep:candle-core", "dep:candle-nn"]
# Optional CUDA backend for candle (NVIDIA only).
cuda = ["candle-core/cuda", "candle-nn/cuda"]
# Optional Metal backend (macOS).
metal = ["candle-core/metal", "candle-nn/metal"]
